# httk-web.github.io

./: 404.html  CNAME  Makefile  README.md  contact.html  index.html  publications.html  publish.py  publish_static.py  pyproject.toml  quickstart-databases.html  quickstart-httkweb.html  quickstart-structures.html  quickstart-vectors.html  quickstart.html
.github/workflows/: httkweb.yaml  httkweb.yml
src-v1/content/: index.httkweb  index.rst  quickstart.httkweb  quickstart.rst
src-v1/static/resources/css/: httkdemo.css
src-v1/templates/: base_default.html.j2  base_default.httkweb.html  default.html.j2  front.html.j2  front.httkweb.html
src/content/: 404.httkweb  contact.httkweb  index.httkweb  index.rst  publications.httkweb  publications.rst  quickstart-databases.httkweb  quickstart-databases.rst  quickstart-httkweb.httkweb  quickstart-httkweb.rst  quickstart-structures.httkweb  quickstart-structures.rst  quickstart-vectors.httkweb  quickstart-vectors.rst  quickstart.httkweb  quickstart.rst
src/templates/: 404.html.j2  base_default.html.j2  base_default.httkweb.html  front.html.j2  front.httkweb.html
