[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httk-website"
version = "0.1.0"
description = "The httk.org website, generated with the httk-web (httk.web) static site generator."
readme = "README.md"
license = "AGPL-3.0+"
requires-python = ">=3.11"
authors = [{ name = "Rickard Armiento", email = "gitcommits@armiento.net" }]
dependencies = [
  "httk-web @ git+https://github.com/httk/httk-web@develop",
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "black",
  "ruff",
  "isort",
  "pyright",
  "mypy"
]

[tool.setuptools]
py-modules = []

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.pyright]
pythonVersion = "3.11"
include = ["serve_dynamic.py", "publish_static.py"]
reportMissingImports = true

[tool.mypy]
python_version = "3.11"
files = ["serve_dynamic.py", "publish_static.py"]
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["httk.web", "httk.web.*"]
ignore_missing_imports = true
